// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircularProgress component Should render circular progress with color primary correctly 1`] = `
<View
  size={24}
  style={
    Object {
      "height": 24,
      "width": 24,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      size={24}
      style={
        Object {
          "height": 24,
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
          "width": 24,
        }
      }
    >
      <View
        size={24}
        style={
          Object {
            "height": 12,
            "overflow": "hidden",
            "width": 24,
          }
        }
      >
        <View
          color="primary"
          size={24}
          style={
            Object {
              "borderColor": "#f4ab34",
              "borderRadius": 12,
              "borderWidth": 2.4,
              "height": 24,
              "width": 24,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`CircularProgress component Should render circular progress with color primary secondary 1`] = `
<View
  size={24}
  style={
    Object {
      "height": 24,
      "width": 24,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      size={24}
      style={
        Object {
          "height": 24,
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
          "width": 24,
        }
      }
    >
      <View
        size={24}
        style={
          Object {
            "height": 12,
            "overflow": "hidden",
            "width": 24,
          }
        }
      >
        <View
          color="secondary"
          size={24}
          style={
            Object {
              "borderColor": "#ff6b0b",
              "borderRadius": 12,
              "borderWidth": 2.4,
              "height": 24,
              "width": 24,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`CircularProgress component Should render circular progress with default props correctly 1`] = `
<View
  size={24}
  style={
    Object {
      "height": 24,
      "width": 24,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "bottom": 0,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      size={24}
      style={
        Object {
          "height": 24,
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
          "width": 24,
        }
      }
    >
      <View
        size={24}
        style={
          Object {
            "height": 12,
            "overflow": "hidden",
            "width": 24,
          }
        }
      >
        <View
          color="primary"
          size={24}
          style={
            Object {
              "borderColor": "#f4ab34",
              "borderRadius": 12,
              "borderWidth": 2.4,
              "height": 24,
              "width": 24,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;
